--- a/index.html
+++ b/index.html
@@ -392,7 +392,317 @@
             </section>
     
             <section class="goods" id="built-in">
-                
+                <h2 class="title">
+                    встраиваемая акустика
+                </h2>
+                <div class="goods__box">
+                     <div class="product">
+                        <div class="product__image-box">
+                            <img src="images/goods/ci-50r.jpg" alt="Встраиваемая акустика KEF Ci-50R" class="product__image">
+                            <div class="product__darken">
+                                <a target="_blank" href="https://pult.ru/product/vstraivaemaya-akustika-kef-ci50r-white" class="product__link">
+                                    Купить
+                                </a>
+                            </div>
+                        </div>
+                        <h3 class="product__title">Встраиваемая акустика KEF Ci-50R</h3>
+                        <p class="product__description">Впечатляющее воспроизведение вокала и великолепный баланс делают данную модель шедевром интеллектуальной миниатюризации.</p>
+                        <div class="product__colors">
+                            <p class="product__colors-title">Цвета:</p>
+                            <div class="product__colors-box">
+                                <p class="product__color">Белый</p>
+                            </div>
+                        </div>
+                        <span class="product__old-price">4 690 ₽</span>
+                        <span class="product__price">3 517,50 ₽/шт</span>
+
+                        <!-- <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a> -->
+                     </div>
+
+                     <div class="product">
+                        <div class="product__image-box">
+                            <img src="images/goods/ci80-2qr.jpg" alt="Встраиваемая акустика KEF Ci80.2QR" class="product__image">
+                            <div class="product__darken">
+                                <a target="_blank" href="https://pult.ru/product/vstraivaemaya-akustika-kef-ci80-2qr" class="product__link">
+                                    Купить
+                                </a>
+                            </div>
+                        </div>
+                        <h3 class="product__title">Встраиваемая акустика KEF Ci80.2QR</h3>
+                        <p class="product__description">Акустическая система Ci80QR, разработанная специально для установки в стены и потолки заподлицо с поверхностью.</p>
+                        <div class="product__colors">
+                            <p class="product__colors-title">Цвета:</p>
+                            <div class="product__colors-box">
+                                <p class="product__color">Белый</p>
+                            </div>
+                        </div>
+                        <span class="product__old-price">8 790 ₽</span>
+                        <span class="product__price">6 592,50 ₽/шт</span>
+
+                        <!-- <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a> -->
+                     </div>
+
+                     <div class="product">
+                        <div class="product__image-box">
+                            <img src="images/goods/ci100-2qr.jpg" alt="Встраиваемая акустика KEF Ci100.2QR" class="product__image">
+                            <div class="product__darken">
+                                <a target="_blank" href="https://pult.ru/product/vstraivaemaya-akustika-kef-ci100-2qr-sp3928aa" class="product__link">
+                                    Купить
+                                </a>
+                            </div>
+                        </div>
+                        <h3 class="product__title">Встраиваемая акустика KEF Ci100.2QR</h3>
+                        <p class="product__description">Новая 2-х полосная, встраиваемая акустика в потолок, предназначена для помещений с высокой влажностью.</p>
+                        <div class="product__colors">
+                            <p class="product__colors-title">Цвета:</p>
+                            <div class="product__colors-box">
+                                <p class="product__color">Черный</p>
+                            </div>
+                        </div>
+                        <span class="product__old-price">11 790 ₽</span>
+                        <span class="product__price">8 842,50 ₽/шт</span>
+
+                        <!-- <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a> -->
+                     </div>
+                </div>
+                <img src="images/ladder.jpg" alt="KEF Q-series" class="img-w100">
+
+                <div class="goods__box">
+                    <div class="product">
+                       <div class="product__image-box">
+                           <img src="images/goods/ci1302cr.jpg" alt="Встраиваемая акустика KEF Ci130.2CR" class="product__image">
+                           <div class="product__darken">
+                               <a target="_blank" href="https://pult.ru/product/vstraivaemaya-akustika-kef-ci130-2cr-130mm-uniq-und--sp3938aa" class="product__link">
+                                   Купить
+                               </a>
+                           </div>
+                       </div>
+                       <h3 class="product__title">Встраиваемая акустика KEF Ci130.2CR</h3>
+                       <p class="product__description">Конструкция динамика позволяет получить точечный источник, который рассеивает звук, равномерно распределяя его по помещению.</p>
+                       <div class="product__colors">
+                           <p class="product__colors-title">Цвета:</p>
+                           <div class="product__colors-box">
+                               <p class="product__color">Черный</p>
+                           </div>
+                       </div>
+                       <span class="product__old-price">11 990 ₽</span>
+                       <span class="product__price">8 992,50 ₽/шт</span>
+
+                       <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a>
+                    </div>
+
+                    <div class="product">
+                       <div class="product__image-box">
+                           <img src="images/goods/ci130er.jpg" alt="Встраиваемая акустика KEF CI130ER" class="product__image">
+                           <div class="product__darken">
+                               <a target="_blank" href="https://pult.ru/product/vstraivaemaya-akustika-kef-ci130er" class="product__link">
+                                   Купить
+                               </a>
+                           </div>
+                       </div>
+                       <h3 class="product__title">Встраиваемая акустика KEF CI130ER</h3>
+                       <p class="product__description">Акустические системы данной серии полностью соответствуют высочайшим стандартам качества воспроизведения.</p>
+                       <div class="product__colors">
+                           <p class="product__colors-title">Цвета:</p>
+                           <div class="product__colors-box">
+                               <p class="product__color">Черный</p>
+                           </div>
+                       </div>
+                       <span class="product__old-price">11 790 ₽</span>
+                       <span class="product__price">8 842,50 ₽/шт</span>
+
+                       <!-- <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a> -->
+                    </div>
+
+                    <div class="product">
+                       <div class="product__image-box">
+                           <img src="images/goods/ci-130qr.jpg" alt="Встраиваемая акустика KEF Ci-130QR" class="product__image">
+                           <div class="product__darken">
+                               <a target="_blank" href="https://pult.ru/product/vstraivaemaya-akustika-kef-ci130qr-uniq-2-way" class="product__link">
+                                   Купить
+                               </a>
+                           </div>
+                       </div>
+                       <h3 class="product__title">Встраиваемая акустика KEF Ci-130QR</h3>
+                       <p class="product__description">Встраиваемая монополярная пассивная акустическая система-сателлит закрытого типа с излучателем Uni-Q.</p>
+                       <div class="product__colors">
+                           <p class="product__colors-title">Цвета:</p>
+                           <div class="product__colors-box">
+                               <p class="product__color">Черный</p>
+                           </div>
+                       </div>
+                       <span class="product__old-price">21 990 ₽</span>
+                       <span class="product__price">16 492,50 ₽/шт</span>
+
+                       <!-- <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a> -->
+                    </div>
+
+                    <div class="product">
+                        <div class="product__image-box">
+                            <img src="images/goods/ci160-2cr.jpg" alt="Встраиваемая акустика KEF Ci160.2CR" class="product__image">
+                            <div class="product__darken">
+                                <a target="_blank" href="https://pult.ru/product/vstraivaemaya-akustika-kef-ci160-2cr" class="product__link">
+                                    Купить
+                                </a>
+                            </div>
+                        </div>
+                        <h3 class="product__title">Встраиваемая акустика KEF Ci160.2CR</h3>
+                        <p class="product__description">Уникальная форма диффузора спроектирована таким образом, чтобы добиться максимально возможной равномерности дисперсии звука.</p>
+                        <div class="product__colors">
+                            <p class="product__colors-title">Цвета:</p>
+                            <div class="product__colors-box">
+                                <p class="product__color">Черный</p>
+                            </div>
+                        </div>
+                        <span class="product__old-price">14 990 ₽</span>
+                        <span class="product__price">11 242,50 ₽/шт</span>
+ 
+                        <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a>
+                     </div>
+
+                     <div class="product">
+                        <div class="product__image-box">
+                            <img src="images/goods/ci160-2cs.jpg" alt="Встраиваемая акустика KEF Ci160.2CS " class="product__image">
+                            <div class="product__darken">
+                                <a target="_blank" href="https://pult.ru/product/vstraivaemaya-akustika-kef-ci160-2cs" class="product__link">
+                                    Купить
+                                </a>
+                            </div>
+                        </div>
+                        <h3 class="product__title">Встраиваемая акустика KEF Ci160.2CS </h3>
+                        <p class="product__description">Динамик с пластиной крепления квадратной формы. Благодаря своей конструкции легко помещается даже внутри тонких стен.</p>
+                        <div class="product__colors">
+                            <p class="product__colors-title">Цвета:</p>
+                            <div class="product__colors-box">
+                                <p class="product__color">Черный</p>
+                            </div>
+                        </div>
+                        <span class="product__old-price">19 690 ₽</span>
+                        <span class="product__price">14 767,50 ₽/шт</span>
+ 
+                        <!-- <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a> -->
+                     </div>
+
+                     <div class="product">
+                        <div class="product__image-box">
+                            <img src="images/goods/ci160qs.jpg" alt="Встраиваемая акустика KEF Ci160QS" class="product__image">
+                            <div class="product__darken">
+                                <a target="_blank" href="https://pult.ru/product/vstraivaemaya-akustika-kef-ci160qs-sp3771aa" class="product__link">
+                                    Купить
+                                </a>
+                            </div>
+                        </div>
+                        <h3 class="product__title">Встраиваемая акустика KEF Ci160QS</h3>
+                        <p class="product__description">Обеспечивает возможности слышать великолепное звучание в любой точке зоны прослушивания, а не только её части.</p>
+                        <div class="product__colors">
+                            <p class="product__colors-title">Цвета:</p>
+                            <div class="product__colors-box">
+                                <p class="product__color">Черный</p>
+                            </div>
+                        </div>
+                        <span class="product__old-price">27 490 ₽</span>
+                        <span class="product__price">20 617,50 ₽/шт</span>
+ 
+                        <!-- <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a> -->
+                     </div>
+               </div>
+
+               <img src="images/kitchen.jpg" alt="KEF Q-series" class="img-w100">
+
+               <div class="goods__box">
+                <div class="product">
+                   <div class="product__image-box">
+                       <img src="images/goods/ci160ts.jpg" alt="Встраиваемая акустика KEF Ci160TS" class="product__image">
+                       <div class="product__darken">
+                           <a target="_blank" href="https://pult.ru/product/vstraivaemaya-akustika-kef-ci160ts" class="product__link">
+                               Купить
+                           </a>
+                       </div>
+                   </div>
+                   <h3 class="product__title">Встраиваемая акустика KEF Ci160TS</h3>
+                   <p class="product__description">АС серии Ci открывает возможности бескомпромиссного звучания KEF, когда свободного пространства явно недостаточно.</p>
+                   <div class="product__colors">
+                       <p class="product__colors-title">Цвета:</p>
+                       <div class="product__colors-box">
+                           <p class="product__color">Черный</p>
+                       </div>
+                   </div>
+                   <span class="product__old-price">35 390 ₽</span>
+                   <span class="product__price">26 542,50 ₽/шт</span>
+
+                   <!-- <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a> -->
+                </div>
+
+                <div class="product">
+                   <div class="product__image-box">
+                       <img src="images/goods/ci160er.jpg" alt="Встраиваемая акустика KEF CI160ERb" class="product__image">
+                       <div class="product__darken">
+                           <a target="_blank" href="https://pult.ru/product/vstraivaemaya-akustika-kef-ci160er" class="product__link">
+                               Купить
+                           </a>
+                       </div>
+                   </div>
+                   <h3 class="product__title">Встраиваемая акустика KEF CI160ER</h3>
+                   <p class="product__description">2-х полосная встраиваемая акустическая система. Колонки оснащены ВЧ диффузором (16 мм), и НЧ диффузором (130 мм)</p>
+                   <div class="product__colors">
+                       <p class="product__colors-title">Цвета:</p>
+                       <div class="product__colors-box">
+                           <p class="product__color">Черный</p>
+                       </div>
+                   </div>
+                   <span class="product__old-price">14 190 ₽</span>
+                   <span class="product__price">10 642,50 ₽/шт</span>
+
+                   <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a>
+                </div>
+
+                <div class="product">
+                    <div class="product__image-box">
+                        <img src="images/goods/ci-160tr.jpg" alt="Встраиваемая акустика KEF Ci-160TR" class="product__image">
+                        <div class="product__darken">
+                            <a target="_blank" href="https://pult.ru/product/vstraivaemaya-akustika-kef-kef-ci-160tr" class="product__link">
+                                Купить
+                            </a>
+                        </div>
+                    </div>
+                    <h3 class="product__title">Встраиваемая акустика KEF Ci-160TR</h3>
+                    <p class="product__description">Благодаря монтажной глубине менее 36 мм модель Ci160TR удачно помещается даже в очень узких нишах.</p>
+                    <div class="product__colors">
+                        <p class="product__colors-title">Цвета:</p>
+                        <div class="product__colors-box">
+                            <p class="product__color">Черный</p>
+                        </div>
+                    </div>
+                    <span class="product__old-price">19 990 ₽</span>
+                    <span class="product__price">14 992,50 ₽/шт</span>
+
+                    <!-- <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a> -->
+                 </div>
+
+
+                <div class="product">
+                    <div class="product__image-box">
+                        <img src="images/goods/ci200qr.jpg" alt="Встраиваемая акустика KEF Ci200QR" class="product__image">
+                        <div class="product__darken">
+                            <a target="_blank" href="https://pult.ru/product/vstraivaemaya-akustika-kef-ci200qr-uniq-2way" class="product__link">
+                                Купить
+                            </a>
+                        </div>
+                    </div>
+                    <h3 class="product__title">Встраиваемая акустика KEF Ci200QR</h3>
+                    <p class="product__description">Позволяет устранить дифракцию и создать акустические системы, работающие блестяще независимо от места их установки.</p>
+                    <div class="product__colors">
+                        <p class="product__colors-title">Цвета:</p>
+                        <div class="product__colors-box">
+                            <p class="product__color">Черный</p>
+                        </div>
+                    </div>
+                    <span class="product__old-price">40 090 ₽</span>
+                    <span class="product__price">30 067,50 ₽/шт</span>
+ 
+                    <!-- <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a> -->
+                 </div>
+           </div>
             </section>
         </div>
     </main>
