gtm-on+q-article

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <script src="https://kit.fontawesome.com/07d9614657.js"></script>
     <script src="js/jquery-3.4.1.min.js"></script>
              <!-- Google Tag Manager -->
-             <!-- <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+             <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
                 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
                 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
                 })(window,document,'script','dataLayer','GTM-WRF7S9B');
-            </script> -->
+            </script>
             <!-- End Google Tag Manager -->
 
     
@@ -27,10 +27,10 @@
 </head>
 <body class="body">
      <!-- Google Tag Manager (noscript) -->
-     <!-- <noscript>
+     <noscript>
         <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WRF7S9B"
         height="0" width="0" style="display:none;visibility:hidden"></iframe>
-    </noscript> -->
+    </noscript>
     <!-- End Google Tag Manager (noscript) -->
 
     <header class="header" id="header">
@@ -115,7 +115,7 @@
                         <span class="product__old-price">79 090 ₽</span>
                         <span class="product__price">59 317,50 ₽/пара</span>
 
-                        <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a>
+                        <a href="https://pult.ru/articles/akusticheskie-sistemy/polochnaya-akustika-kef-q-innovatsii-v-britanskom-stile/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a>
                      </div>
 
                      <div class="product">
@@ -140,7 +140,7 @@
                         <span class="product__old-price">112 900 ₽</span>
                         <span class="product__price">84 742,50 ₽/пара</span>
 
-                        <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a>
+                        <a href="https://pult.ru/articles/akusticheskie-sistemy/polochnaya-akustika-kef-q-innovatsii-v-britanskom-stile/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a>
                      </div>
 
                      <div class="product">
@@ -165,7 +165,7 @@
                         <span class="product__old-price">158 190 ₽</span>
                         <span class="product__price">118 642,50 ₽/пара</span>
 
-                        <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a>
+                        <a href="https://pult.ru/articles/akusticheskie-sistemy/polochnaya-akustika-kef-q-innovatsii-v-britanskom-stile/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a>
                      </div>
                 </div>
                 <img src="images/q-series.jpg" alt="KEF Q-series" class="img-w100">
@@ -197,7 +197,7 @@
                         <span class="product__old-price">33 900 ₽</span>
                         <span class="product__price">25 492,50 ₽/пара</span>
 
-                        <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a>
+                        <a href="https://pult.ru/articles/akusticheskie-sistemy/polochnaya-akustika-kef-q-innovatsii-v-britanskom-stile/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a>
                      </div>
 
                      <div class="product">
@@ -222,7 +222,7 @@
                         <span class="product__old-price">45 190 ₽</span>
                         <span class="product__price">33 892,50 ₽/пара</span>
 
-                        <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a>
+                        <a href="https://pult.ru/articles/akusticheskie-sistemy/polochnaya-akustika-kef-q-innovatsii-v-britanskom-stile/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a>
                      </div>
                 </div>
                 <img src="images/white-kef.jpg" alt="KEF Q-series" class="img-w100">
@@ -254,7 +254,7 @@
                         <span class="product__old-price">39 990 ₽</span>
                         <span class="product__price">29 992,50 ₽/пара</span>
 
-                        <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a>
+                        <a href="https://pult.ru/articles/akusticheskie-sistemy/polochnaya-akustika-kef-q-innovatsii-v-britanskom-stile/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a>
                      </div>
 
                      <div class="product">
@@ -278,7 +278,7 @@
                         <span class="product__old-price">49 790 ₽</span>
                         <span class="product__price">37 342,50 ₽/пара</span>
 
-                        <!-- <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a> -->
+                        <a href="https://pult.ru/articles/akusticheskie-sistemy/polochnaya-akustika-kef-q-innovatsii-v-britanskom-stile/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a>
                      </div>
                 </div>
                 <img src="images/black-kef.jpg" alt="KEF Q-series" class="img-w100">
@@ -310,7 +310,7 @@
                         <span class="product__old-price">39 990 ₽</span>
                         <span class="product__price">29 992,50 ₽/пара</span>
 
-                        <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a>
+                        <a href="https://pult.ru/articles/akusticheskie-sistemy/polochnaya-akustika-kef-q-innovatsii-v-britanskom-stile/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a>
                      </div>
             </section>
     
@@ -339,7 +339,7 @@
                         <span class="product__old-price">64 990 ₽</span>
                         <span class="product__price">48 742,50 ₽/шт</span>
 
-                        <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a>
+                        <!-- <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a> -->
                      </div>
 
                      <div class="product">
@@ -385,7 +385,7 @@
                         <span class="product__old-price">85 990 ₽</span>
                         <span class="product__price">64 492,50 ₽/шт</span>
 
-                        <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a>
+                        <!-- <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a> -->
                      </div>
                 </div>
                 <img src="images/sub.jpg" alt="KEF Q-series" class="img-w100">
@@ -488,7 +488,7 @@
                        <span class="product__old-price">11 990 ₽</span>
                        <span class="product__price">8 992,50 ₽/шт</span>
 
-                       <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a>
+                       <!-- <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a> -->
                     </div>
 
                     <div class="product">
@@ -557,7 +557,7 @@
                         <span class="product__old-price">14 990 ₽</span>
                         <span class="product__price">11 242,50 ₽/шт</span>
  
-                        <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a>
+                        <!-- <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a> -->
                      </div>
 
                      <div class="product">
@@ -653,7 +653,7 @@
                    <span class="product__old-price">14 190 ₽</span>
                    <span class="product__price">10 642,50 ₽/шт</span>
 
-                   <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a>
+                   <!-- <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a> -->
                 </div>
 
                 <div class="product">
