--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </p>
                 <img src="images/intro.jpg" alt="KEF intro" class="img-w100">
                 <p class="intro__description">
-                    Легендарная британская компания KEF вот уже почти 60 лет разрабатывает и производит одни из самых оригинальных акустических систем. При этом последние 30 лет они снабжаются уникальными коаксиальными динамиками Uni-Q. Серия Q в ассортименте KEF - одна из самых доступных, тем не менее, на ее базе можно собрать и бескомпромиссную стереосистему и полноценный домашний кинотеатр, даже с поддержкой иммерсивных аудиоформатов. А встраиваемые колонки серии CI обеспечат как качественное звучание, так и полную интеграцию в интерьер любого помещения. 
+                    Легендарная британская компания KEF вот уже почти 60 лет разрабатывает и производит одни из самых оригинальных акустических систем. При этом последние 30 лет они снабжаются уникальными коаксиальными динамиками Uni-Q. Серия Q в ассортименте KEF - одна из самых доступных, тем не менее, на ее базе можно собрать и бескомпромиссную стереосистему и полноценный домашний кинотеатр, даже с поддержкой иммерсивных аудиоформатов. А встраиваемые колонки обеспечат как качественное звучание, так и полную интеграцию в интерьер любого помещения. 
                 </p>
                 <div class="intro__links">
                      <ul class="intro__links-list">
