seconds-article-added

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                          <li class="intro__link-elem">
                             <a href="#floor" class="intro__link">Напольная акустика</a>
                          </li>
-                         <li class="intro__link-elem">
+                         <li class="intro__link-elem"> 
                             <a href="#shelf" class="intro__link">Полочная акустика</a>
                          </li>
                          <li class="intro__link-elem">
@@ -488,7 +488,7 @@
                        <span class="product__old-price">11 990 ₽</span>
                        <span class="product__price">8 992,50 ₽/шт</span>
 
-                       <!-- <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a> -->
+                       <a href="https://pult.ru/articles/akusticheskie-sistemy/vstraivaemaya-akustika-kef-nevidimki-s-khoroshim-zvukom/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a>
                     </div>
 
                     <div class="product">
@@ -557,7 +557,7 @@
                         <span class="product__old-price">14 990 ₽</span>
                         <span class="product__price">11 242,50 ₽/шт</span>
  
-                        <!-- <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a> -->
+                        <a href="https://pult.ru/articles/akusticheskie-sistemy/vstraivaemaya-akustika-kef-nevidimki-s-khoroshim-zvukom/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a>
                      </div>
 
                      <div class="product">
@@ -653,7 +653,7 @@
                    <span class="product__old-price">14 190 ₽</span>
                    <span class="product__price">10 642,50 ₽/шт</span>
 
-                   <!-- <a href="https://pult.ru/articles/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a> -->
+                   <a href="https://pult.ru/articles/akusticheskie-sistemy/vstraivaemaya-akustika-kef-nevidimki-s-khoroshim-zvukom/" target="_blank" class="product__bottom-button">Читать обзор&nbsp;&rarr;</a>
                 </div>
 
                 <div class="product">
