добавить товары, заменить лого

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <header class="header" id="header">
         <a href="https://pult.ru" class="image-link" target="_blank">
-            <img src="images/logo-black.png" alt="pult.ru logo" class="header__logo">
+            <img src="images/logo-black.svg" alt="pult.ru logo" class="header__logo">
         </a>
         <p class="header__slogan">
             Эксклюзивное предложение
@@ -731,14 +731,14 @@
 
                  <div class="product">
                     <div class="product__image-box">
-                        <img src="images/goods/Ci130QRfl.jpg" alt="Встраиваемая акустика KEF Ci130QRfl Flush MT 5.25" class="product__image">
+                        <img src="images/goods/Ci130qrfl.jpg" alt="Встраиваемая акустика KEF Ci130QRfl" class="product__image">
                         <div class="product__darken">
                             <a target="_blank" href="https://pult.ru/product/vstraivaemaya-akustika-kef-ci130qrfl-flush-mt-5-25--sp4012aa" class="product__link">
                                 Купить
                             </a>
                         </div>
                     </div>
-                    <h3 class="product__title">Встраиваемая акустика KEF Ci130QRfl Flush MT 5.25</h3>
+                    <h3 class="product__title">Встраиваемая акустика KEF Ci130QRfl</h3>
                     <p class="product__description">Ci130QRfl от KEF - это безрамный архитектурный динамик для скрытого монтажа, разработанный для обеспечения высококачественного звука и простой установки.</p>
                     <div class="product__colors">
                         <p class="product__colors-title">Цвета:</p>
@@ -754,15 +754,15 @@
 
                  <div class="product">
                     <div class="product__image-box">
-                        <img src="images/goods/Ci130QRfl.jpg" alt="Встраиваемая акустика KEF Ci130QR SL" class="product__image">
+                        <img src="images/goods/Ci130qsfl.jpg" alt="Встраиваемая акустика KEF Ci130QS fl" class="product__image">
                         <div class="product__darken">
-                            <a target="_blank" href="https://pult.ru/product/vstraivaemaya-akustika-kef-ci130qrfl-flush-mt-5-25--sp4012aa" class="product__link">
+                            <a target="_blank" href="https://pult.ru/product/vstraivaemaya-akustika-kef-ci130qsfl-flush-mt-5-25--sp4019aa" class="product__link">
                                 Купить
                             </a>
                         </div>
                     </div>
-                    <h3 class="product__title">Встраиваемая акустика KEF Ci130QR SL</h3>
-                    <p class="product__description">Ci130QR SL от KEF - это безрамный архитектурный динамик для скрытого монтажа, разработанный для обеспечения высококачественного звука и простой установки.</p>
+                    <h3 class="product__title">Встраиваемая акустика KEF Ci130QSfl</h3>
+                    <p class="product__description">Разработанный как для новостроек, так и для модернизации, Ci130QSfl устанавливается заподлицо со стеной или потолком, что делает его идеальным для домов с чистыми линиями и минималистскими элементами.</p>
                     <div class="product__colors">
                         <p class="product__colors-title">Цвета:</p>
                         <div class="product__colors-box">
