--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     акустика KEF
                 </h1>
                 <p class="intro__subtitle">
-                    Со скидкой 45%
+                    Со скидкой до 45%
                 </p>
                 <p class="intro__subsubtitle">
                     Качественный звук доступнее с PULT.ru
