--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
 
                  <div class="product">
                     <div class="product__image-box">
-                        <img src="images/goods/Ci130qrfl.jpg" alt="Встраиваемая акустика KEF Ci130QRfl" class="product__image">
+                        <img src="images/goods/ci130qrfl.jpg" alt="Встраиваемая акустика KEF Ci130QRfl" class="product__image">
                         <div class="product__darken">
                             <a target="_blank" href="https://pult.ru/product/vstraivaemaya-akustika-kef-ci130qrfl-flush-mt-5-25--sp4012aa" class="product__link">
                                 Купить
@@ -754,7 +754,7 @@
 
                  <div class="product">
                     <div class="product__image-box">
-                        <img src="images/goods/Ci130qsfl.jpg" alt="Встраиваемая акустика KEF Ci130QS fl" class="product__image">
+                        <img src="images/goods/ci130qsfl.jpg" alt="Встраиваемая акустика KEF Ci130QS fl" class="product__image">
                         <div class="product__darken">
                             <a target="_blank" href="https://pult.ru/product/vstraivaemaya-akustika-kef-ci130qsfl-flush-mt-5-25--sp4019aa" class="product__link">
                                 Купить
